# MMOServer

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat
AcceptStressTest/AcceptStressTest/: AcceptStressTest.vcxproj
EchoDummy/: EchoDummy.sln
EchoDummy/EchoDummy/: Config.h  DummyClient.cpp  DummyManager.h  EchoDummy.vcxproj  Protocol.h
EchoDummyClient/EchoDummyClient/: DummyClient.cpp  EchoDummyClient.vcxproj  Protocol.h  README.md
GameClient/: ClientConfig.h  ClientNetwork.cpp  ClientNetwork.h  ClientPlayer.h  ConsoleRenderer.cpp  ConsoleRenderer.h  GameClient.sln  GameClient.vcxproj  GameClient.vcxproj.filters  GameInstance.cpp  GameInstance.h  NetworkEventQueue.h  PlayerManager.h  TEST_REQUEST.md
IOCP_MMOClient/: ClientNetwork.cpp  ClientNetwork.h  ClientPlayer.h  ConsoleRenderer.cpp  ConsoleRenderer.h  GameInstance.cpp  GameInstance.h  IOCP_MMOClient.sln  IOCP_MMOClient.vcxproj  NetworkEventQueue.h  PlayerManager.h  TEST_REQUEST.md  mainClient.cpp
IOCP_MMOServer/: Common.h  GameServer.cpp  GameServer.h  IOCPServer.cpp  IOCPServer.h  IOCP_MMOServer.sln  IOCP_MMOServer.vcxproj  IOCP_MMOServer.vcxproj.filters  MonitorManager.h  MonitorServer.h  Player.cpp  Player.h  RingBuffer.h  SectorManager.cpp  SerialBuffer.cpp  SerialBuffer.h  ServerConfig.h  Zone.cpp  Zone.h  ZoneManager.cpp  ZoneManager.h  main.cpp
IOCP_MMOServer/LockFree/: LockFreeStack.h  (+1 more)
IOCP_Server/: GameServer.cpp  GameServer.h  IOCPServer.cpp  IOCPServer.h  IOCP_Server.sln  IOCP_Server.vcxproj  IOCP_Server.vcxproj.filters  MapManager.cpp  MapManager.h  MonitorManager.h  MonitorServer.h  Player.cpp  Player.h  SectorManager.cpp  SectorManager.h  SerialBuffer.cpp  ServerConfig.h  Zone.cpp  Zone.h  ZoneManager.cpp  ZoneManager.h  main.cpp
MMOServer/: GameServer.h  IOCP_Server.vcxproj  IOCP_Server.vcxproj.filters  MonitorManager.h  Player.cpp  Player.h  RingBuffer.h  SerialBuffer.h  Zone.cpp  ZoneManager.h
MO_MiniGames_Client/: MO_MiniGames_Client.vcxproj
MO_MiniGames_Server/: CentralizedServer.cpp  IOCPServer.cpp  IOCPServer.h  MO_MiniGames_Server.vcxproj  MO_MiniGames_Server.vcxproj.filters  RingBuffer.h  TimingWheel.h  main.cpp
RIO/: build-A-iocp.bat  build-B-rio.bat  echo-smoke.ps1
Run/: .IOCP_SET_build.bat  .release_upload.bat  0. simple_test.bat  1. Gamecodi_echo_stress.bat  1. simple_test.bat  2-1. Custom_echo_stress_x2.bat  2-1. Echo_stress_server_only.bat  2-2. Echo_stress_client_only.bat  2. Custom_echo_stress.bat  2. gamecodi_echo_stress.bat  3-1. MMO_stress_server_only.bat  3-2. MMO_stress_client_only.bat  3. MMO_stress.bat  3. custom_echo_stress.bat  7. Affinity_AB.bat  8. Ceiling_Sweep.bat  ClientConfig.ini  ServerConfig.ini  affinity-ab.ps1  affinity-ceiling-sweep.ps1  build_and_run.bat  clientcount-sweep.ps1  membership-ab.ps1  release_pull.bat  release_push.bat  simple_test.bat  stress_client_ip.txt.example  test_echo_stress.bat  wtk-sweep.ps1
Shared/: RingBuffer.h
img/: 요쳥양식.txt
(+274 files in other folders)
